# text

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_DATASETS.md  LICENSE  README.md  README.rst  _config.yml  codecov.yml  data.html  data_functional.html  data_metrics.html  data_utils.html  datasets.html  examples.html  experimental_datasets.html  experimental_transforms.html  experimental_vectors.html  experimental_vocab.html  genindex.html  hubconf.py  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  readthedocs.yml  regex-jit.ipynb  requirements.txt  search.html  searchindex.js  (+9 more)
.circleci/: cached_datasets_list.txt  config.yml  config.yml.in  regenerate.py
.github/: pytorch-probot.yml
.vector_cache/: glove.test_twitter.27B.200d.pt  make_test_glove_vectors.py
0.10.0/: .buildinfo  data_functional.html  data_metrics.html  data_utils.html  datasets.html  genindex.html  index.html  nn_modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html  vocab.html
0.11./: data_functional.html  data_metrics.html  data_utils.html  datasets.html  genindex.html  index.html  nn_modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html  vocab.html
0.11.0/: .buildinfo  data_functional.html  data_metrics.html  data_utils.html  datasets.html  genindex.html  index.html  nn_modules.html  objects.inv  py-modindex.html  search.html  utils.html  vocab.html
0.12.0/: data_functional.html  data_metrics.html  data_utils.html  datasets.html  functional.html  genindex.html  index.html  models.html  nn_modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  transforms.html  utils.html  vocab.html
0.13.0/: .buildinfo  data_functional.html  data_metrics.html  data_utils.html  datasets.html  functional.html  genindex.html  index.html  models.html  nn_modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  transforms.html  utils.html  vocab.html
0.13.1/: data_functional.html  data_metrics.html  data_utils.html  datasets.html  functional.html  genindex.html  index.html  models.html  nn_modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  transforms.html  utils.html  vocab.html
0.14.0/: data_functional.html  data_metrics.html  data_utils.html  datasets.html  functional.html  genindex.html  index.html  models.html  nn_modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  transforms.html  utils.html  vocab.html
0.14.1/: data_functional.html  data_metrics.html  data_utils.html  datasets.html  functional.html  genindex.html  index.html  models.html  nn_modules.html  objects.inv  py-modindex.html  search.html  transforms.html  utils.html  vocab.html
0.15.0/: data_functional.html  data_metrics.html  datasets.html  genindex.html  index.html  logo.html  py-modindex.html  search.html  searchindex.js  transforms.html
0.15.1/: data_utils.html  datasets.html  functional.html  models.html  nn_modules.html  objects.inv  searchindex.js  utils.html  vocab.html
0.15.2/: data_functional.html  data_metrics.html  data_utils.html  datasets.html  functional.html  genindex.html  index.html  logo.html  models.html  nn_modules.html  objects.inv  py-modindex.html  search.html  transforms.html  utils.html  vocab.html
0.16.0/: data_functional.html  data_metrics.html  data_utils.html  datasets.html  functional.html  genindex.html  index.html  logo.html  models.html  nn_modules.html  objects.inv  py-modindex.html  search.html  transforms.html  utils.html  vocab.html
0.17.0/: data_functional.html  data_metrics.html  data_utils.html  datasets.html  functional.html  genindex.html  index.html  logo.html  models.html  nn_modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  transforms.html  utils.html  vocab.html
0.18.0/: data_functional.html  data_metrics.html  data_utils.html  datasets.html  functional.html  genindex.html  index.html  logo.html  models.html  nn_modules.html  objects.inv  py-modindex.html  search.html  transforms.html  utils.html  vocab.html
0.8/: data.html  data_functional.html  data_metrics.html  data_utils.html  datasets.html  examples.html  genindex.html  index.html  nn_modules.html  py-modindex.html  search.html  utils.html  vocab.html
0.8.1/: .buildinfo  data.html  data_functional.html  data_metrics.html  data_utils.html  datasets.html  examples.html  genindex.html  index.html  nn_modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html  vocab.html
0.9.0/: data_functional.html  data_metrics.html  data_utils.html  datasets.html  genindex.html  index.html  nn_modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  utils.html  vocab.html
_modules/: index.html
_sources/: data.rst.txt  experimental_datasets.rst.txt  index.rst.txt
_static/: documentation_options.js
benchmark/: benchmark_basic_english_normalize.py  benchmark_bert_tokenizer.py  benchmark_cpp_pipeline.py  utils.py  (+16 more)
benchmark/csrc/: CMakeLists.txt  benchmark_jit_pipeline.cpp
examples/libtorchtext/: .gitignore  CMakeLists.txt  README.md  build.sh  test_tokenizers.py
examples/libtorchtext/tokenizer/: CMakeLists.txt  README.md  create_tokenizer.py  main.cpp
torchtext/csrc/: CMakeLists.txt  a.cpp  basic_english_normalize.cpp  basic_english_normalize.h  benchmarks.cpp  bert_tokenizer.cpp  bert_tokenizer.h  clip_tokenizer.cpp  clip_tokenizer.h  common.cpp  common.h  export.h  foo.cpp  foo.h  gpt2_bpe_tokenizer.cpp  gpt2_bpe_tokenizer.h  pybind_registration.cpp  regex.cpp  regex.h  regex_tokenizer.cpp  regex_tokenizer.h  register_bindings.cpp  register_pybindings.cpp  register_torchbindings.cpp  sentencepiece.cpp  sentencepiece.h  sentencepiece_factory.h  text.h  text_extension.cpp  vectors.cpp  vectors.h  vocab.cpp  vocab.h  vocab_factory.cpp  vocab_factory.h
torchtext/csrc/core/: dictionary.cpp  dictionary.h  utils.cpp  utils.h  vocabulary.cpp  vocabulary.h
(+1494 files in other folders)
